Added tests and mockito dependency